syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.a.eye.skywalking.network.grpc";

message AckSpan {
    TraceId traceId = 1;
    string parentLevel = 2;
    int32 levelId = 3;
    int64 cost = 4;
    int32 statusCode = 5;
    string exceptionStack = 6;
    string viewpointId = 7;
    string username = 8;
    string applicationCode = 9;

    int32 routeKey = 10;
}

message RequestSpan {
    TraceId traceId = 1;
    string parentLevel = 2;
    int32 levelId = 3;
    string viewPointId = 4;
    int64 startDate = 5;
    string spanTypeDesc = 6;
    string callType = 7;
    uint32 spanType = 8;
    string applicationCode = 9;
    string username = 10;
    string businessKey = 11;
    int32 processNo = 13;
    string address = 14;

    int32 routeKey = 15;
}

message TraceId {
    repeated int64 segments = 1;
}

message Span {
    TraceId traceId = 1;
    string parentLevelId=2;
    int32 levelId = 3; // parentLevelId + "." + levelId
    string viewpoint = 4;
    int64 startTime = 5;
    int64 cost = 6;
    int32 statusCode = 7;
    string exceptionStack = 8;
    string spanTypeDesc = 9;
    string callType = 10;
    int32 spanType = 11;
    string applicationCode = 12;
    string username = 13;
    string businessKey = 14;
    int32 processNo = 15;
    string address = 16;
}
